--- a/MedOpremaBackend/src/main/resources/application.properties
+++ b/MedOpremaBackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=MedOpremaBackend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc.mysql://localhost:3306/medoprema
+spring.datasource.url=jdbc:mysql://localhost:3306/medoprema
 spring.datasource.username = root
 spring.datasource.password = 1234
 
