added role based access, super admin and admin roles,responding to complaints

--- a/MedOpremaBackend/src/main/resources/application.properties
+++ b/MedOpremaBackend/src/main/resources/application.properties
@@ -9,8 +9,19 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=luka.farkas998@gmail.com
-spring.mail.password=gecvdefzqqiufmf
+spring.mail.username=isasestica@gmail.com
+spring.mail.password=srvjpqupvftvxltc
+
+
+# SMTP server properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.protocol=smtp
+
+
+logging.level.org.springframework.security=DEBUG
